# AutoPolio

./: .env.example  .gitignore  README.md  pyproject.toml
data/: jobkorea_urls.json  linkareer_empty_answer_ids.txt  linkareer_empty_ids.txt  linkareer_urls.json
docs/: API_Auth_Spec.md  API_Common.md  API_Full_Spec.md  API_GitHub_Portfolio_Spec.md  API_GitHub_Spec.md  API_Service_Spec.md  AUTOFOLIO_16주_계획표.md  AUTOFOLIO_16주_계획표_간결화.md  AUTOFOLIO_API_명세_수정방향_정리.md  AUTOFOLIO_API_스펙.md  AUTOFOLIO_DB_스키마_설계.md  AUTOFOLIO_GitHub_OAuth_가이드.md  AUTOFOLIO_GitHub_임베딩_구현_계획.md  AUTOFOLIO_Inspector_그래프_파이프라인_제안.md  AUTOFOLIO_LangGraph_설계.md  AUTOFOLIO_RAG_파이프라인_핵심.md  AUTOFOLIO_User_Asset_스키마_설계.md  AUTOFOLIO_Writer_그래프_파이프라인_제안.md  AUTOFOLIO_개발_규칙.md  AUTOFOLIO_기획서.md  AUTOFOLIO_디렉토리_구조.md  AUTOFOLIO_임베딩전략.md  AUTOFOLIO_채용공고파싱전략.md  AUTOFOLIO_테스트_가이드.md  AUTOFOLIO_파이프라인.md  AUTOFOLIO_합격자소서_벡터DB_스키마.md  openapi.json  portfolio_graph.mmd  writer_graph.mmd
scripts/: README_저장전략.md  __init__.py  check_jobkorea_answers.py  clean_jobkorea_answers.py  export_openapi.py  github_code_and_commits_experiment.py  github_oauth_local_test.py  github_repo_describe_practice.py  init_sqlite_db.py  jobkorea_collect_urls.py  jobkorea_crawl_detail.py  jobkorea_empty_and_error_ids.py  linkareer_collect_urls.py  linkareer_crawl_detail.py  linkareer_empty_ids.py  linkareer_llm_extract_full.py  linkareer_retry_empty.py  llm_cover_letter.py  repo_ingestion_strategy_experiment.py  requirements-crawl.txt
src/: __init__.py
tests/: conftest.py
week-issues/: week1-cover-letter-crawl-schema.md  (+10 more)
(+1367 files in other folders)
