[tool.poetry]
name = "autofolio"
version = "0.1.0"
description = "From Code to Career - 증거 기반 개발자 이력서"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.28.0"
beautifulsoup4 = ">=4.11.0"
playwright = ">=1.40.0"
openai = ">=1.0.0"
python-dotenv = "^1.2.1"
langgraph = ">=0.2.0"

[tool.poetry.group.dev.dependencies]
# pytest = "^7.0.0"
# black = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
